--- a/client/src/components/Auth/AuthForm.module.css
+++ b/client/src/components/Auth/AuthForm.module.css
@@ -58,6 +58,14 @@
     background-color: #873abb;
     border-color: #873abb;
   }
+
+.actions button:disabled,
+.actions button:disabled:hover,
+.actions button:disabled:active {
+  background-color: #ccc;
+  color: #656262;
+  border-color: #ccc;
+}
   
   .actions .toggle {
     margin-top: 1rem;
@@ -70,4 +78,60 @@
   .actions .toggle:hover {
     background-color: transparent;
     color: #ae82cc;
+  }
+
+  .form-control {
+    margin-bottom: 1rem;
+  }
+  
+  .form-control input,
+  .form-control label {
+    display: block;
+  }
+  
+  .form-control label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  
+  .form-control input{
+    font: inherit;
+    background-color: #f1e1fc;
+    color: #38015c;
+    border-radius: 4px;
+    border: 1px solid white;
+    width: 100%;
+    text-align: left;
+    padding: 0.25rem;
+  }
+  
+  .form-control input:focus {
+    outline: none;
+    border-color: #240370;
+    background-color: #e0d4fd;
+  }
+  
+  .control-group {
+    display: flex;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+  }
+  
+  .control-group .form-control {
+    min-width: 15rem;
+    flex: 1;
+  }
+
+  .invalid input {
+    border: 1px solid #b40e0e;
+    background-color: #fddddd;
+  }
+  
+  .invalid input:focus {
+    border-color: #ff8800;
+    background-color: #fbe8d2;
+  }
+  
+  .error-text {
+    color: #b40e0e;
   }
