--- a/client/src/components/UI/Button.module.css
+++ b/client/src/components/UI/Button.module.css
@@ -33,3 +33,13 @@
     background-color: transparent;
     color: #ae82cc;
   }
+
+.actions {
+    cursor: pointer;
+    color: white;
+    margin: 0.1rem;
+    background-color: #615966;
+    border: 1px solid #615966;
+    border-radius: 4px;
+    padding: 0.15rem 0.5rem;
+}
