--- a/client/src/components/Candidate/NewCandidate/CandidateForm.module.css
+++ b/client/src/components/Candidate/NewCandidate/CandidateForm.module.css
@@ -1,32 +1,55 @@
 .main {
-    margin: 3rem auto;
-    width: 95%;
-    max-width: 25rem;
-    border-radius: 6px;
-    background-color: #38015c;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    text-align: center;
-    color: white;
-  }
-  
-  .main h1 {
-    text-align: center;
-    color: white;
-  }
-  
-  .control {
-    margin-bottom: 0.5rem;
-  }
-  
-  .actions {
-    margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  margin: 3rem auto;
+  width: 95%;
+  max-width: 25rem;
+  border-radius: 6px;
+  background-color: #38015c;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  text-align: center;
+  color: white;
+}
 
-  
-  .error-text {
-    color: #b40e0e;
-  }
+.main h1 {
+  text-align: center;
+  color: white;
+}
+
+.main label,
+.main select {
+  display: block;
+}
+
+.main label {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.main select {
+  font: inherit;
+  background-color: #f1e1fc;
+  color: #38015c;
+  border-radius: 4px;
+  border: 1px solid white;
+  width: 100%;
+  padding: 0.25rem;
+}
+
+.main select:invalid {
+  color: gray;
+}
+
+.control {
+  margin-bottom: 0.5rem;
+}
+
+.actions {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error-text {
+  color: #b40e0e;
+}
