--- a/client/src/components/UI/Button.module.css
+++ b/client/src/components/UI/Button.module.css
@@ -43,3 +43,13 @@
     border-radius: 4px;
     padding: 0.15rem 0.5rem;
 }
+
+.close{
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+    font-weight: bold;
+    padding: 0.2rem 0.35rem;
+    border-radius: 6px;
+    cursor: pointer;
+}
